#feature/alpha_kapil - Changed Testing for STR